--- a/app/.env.example
+++ b/app/.env.example
@@ -21,11 +21,11 @@ LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
 DB_CONNECTION=sqlite
-# DB_HOST=127.0.0.1
-# DB_PORT=3306
-# DB_DATABASE=app
-# DB_USERNAME=root
-# DB_PASSWORD=
+DB_HOST=18.208.165.83
+DB_PORT=3306
+DB_DATABASE=example-app
+DB_USERNAME=root
+DB_PASSWORD=password
 
 SESSION_DRIVER=file
 SESSION_LIFETIME=120
